# Masters-thesis

source_codes/autoWBCNN/: CMakeLists.txt  Model_tracing_script.py  autoWBCNN.cpp
source_codes/cracksDetectionCNN/: CMakeLists.txt  cracksDetectionCNN.cpp
source_codes/cropmarks/: cropmarks.c
