cmake_minimum_required(VERSION 3.14 FATAL_ERROR)
project(autoWBCNN)
set(CMAKE_CXX_STANDARD 14)
find_package(CUDA REQUIRED)
list(APPEND CMAKE_PREFIX_PATH /root/libtorch)
find_package(Torch REQUIRED)  
find_package(OpenCV REQUIRED)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -lm -ldl")
set(CMAKE_CUDA_ARCHITECTURES 52 60 61 75 86)
add_executable(autoWBCNN autoWBCNN.cpp)
target_link_libraries(autoWBCNN ${TORCH_LIBRARIES} ${OpenCV_LIBS})
set_property(TARGET autoWBCNN PROPERTY CXX_STANDARD 14)