cmake_minimum_required(VERSION 3.14 FATAL_ERROR)
project(cracksDetectionCNN)
set(CMAKE_CXX_STANDARD 14)
list(APPEND CMAKE_PREFIX_PATH /root/libtorch)
find_package(Torch REQUIRED)
find_package(OpenCV REQUIRED)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -lm -ldl")
add_executable(cracksDetectionCNN cracksDetectionCNN.cpp)
target_link_libraries(cracksDetectionCNN ${TORCH_LIBRARIES} ${OpenCV_LIBS})
set_property(TARGET cracksDetectionCNN PROPERTY CXX_STANDARD 14)